navigating using to JsonPath